force-app/main/default/objects/Rushikesh_Information__mdt/Rushikesh_Information__mdt.object-meta.xml
<CustomObject>
    <label>Rushikesh Information</label>
    <pluralLabel>Rushikesh Information</pluralLabel>
</CustomObject>