force-app/main/default/objects/Rushikesh_Information__mdt/fields/About_HTML__c.field-meta.xml
<CustomField>
    <fullName>About_HTML__c</fullName>
    <label>About HTML</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>