force-app/main/default/objects/Rushikesh_Information__mdt/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <label>Contact Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>