force-app/main/default/objects/Rushikesh_Information__mdt/fields/Current_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Company_Name__c</fullName>
    <label>Current Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>