force-app/main/default/objects/Rushikesh_Information__mdt/fields/Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_ID__c</fullName>
    <label>Email ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>