force-app/main/default/objects/Rushikesh_Information__mdt/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <label>Full Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>