force-app/main/default/objects/Rushikesh_Information__mdt/fields/Github_ID__c.field-meta.xml
<CustomField>
    <fullName>Github_ID__c</fullName>
    <label>Github ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>