force-app/main/default/objects/Rushikesh_Information__mdt/fields/Github_URL__c.field-meta.xml
<CustomField>
    <fullName>Github_URL__c</fullName>
    <label>Github URL</label>
    <type>Url</type>
</CustomField>