force-app/main/default/objects/Rushikesh_Information__mdt/fields/Post__c.field-meta.xml
<CustomField>
    <fullName>Post__c</fullName>
    <label>Post</label>
    <length>50</length>
    <type>Text</type>
</CustomField>