force-app/main/default/objects/Rushikesh_Information__mdt/fields/Secondary_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Email_ID__c</fullName>
    <label>Secondary Email ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>