force-app/main/default/objects/Rushikesh_Information__mdt/fields/Sub_Post__c.field-meta.xml
<CustomField>
    <fullName>Sub_Post__c</fullName>
    <label>Sub Post</label>
    <length>50</length>
    <type>Text</type>
</CustomField>