force-app/main/default/objects/Rushikesh_Information__mdt/fields/Trialhead_URL__c.field-meta.xml
<CustomField>
    <fullName>Trialhead_URL__c</fullName>
    <label>Trialhead URL</label>
    <type>Url</type>
</CustomField>